--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,9 +6,6 @@ before_script:
   - cp .env.example .env
   - export USR=${UID}
   - export GRP=${GID}
-  - docker network prune -f
-  - docker-compose -f ./Docker/production.yml down
-  - docker system prune -f
 
 cache:
     paths:
@@ -22,6 +19,10 @@ stages:
 
 build:
   stage: build
+  before_script:
+  - docker network prune -f
+  - docker-compose -f ./Docker/production.yml down
+  - docker system prune -f
   script:
     - docker-compose -f ./Docker/production.yml up -d
     - docker-compose -f ./Docker/production.yml exec -T php composer install --no-dev
